Added file upload field for attaching scenarios and dynamic overriding files in the 'Data' folder, along with a dropdown list for scenario selection

--- a/Skrypty/assets/style.css
+++ b/Skrypty/assets/style.css
@@ -879,3 +879,15 @@ body {
         margin-bottom: 3rem;
     }
 }
+
+#upload-data {
+    background-color: #2b2b2b;
+    border: 2px dashed #007eff;
+    padding: 5px;
+    text-align: center;
+    cursor: pointer;
+}
+
+#upload-data:hover {
+    background-color: #585656;
+}
